<resources>
    <string name="app_name">My Application</string>
    <string name="developers_life" translatable="false">Developers Life</string>
    <string name="profile_image" translatable="false">Profile Image</string>
    <string name="best">Best</string>
    <string name="hot">Hot</string>
    <string name="latest">Latest</string>
    <string name="main_image" translatable="false">Main Image</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="cloud">Cloud</string>
    <string name="error_text">An error occurred during loading the image. Check your internet connection.</string>
    <string name="retry">RETRY</string>
</resources>