<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/profile_image"
        android:padding="16dp"
        android:src="@drawable/outline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/mainTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/developers_life"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileImage"
        tools:ignore="SpUsage" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="profileImage,mainTitleText" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="backButton" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_margin="@dimen/bottom_button_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forwardButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="3dp"
        android:src="@drawable/ic_reload"
        android:contentDescription="@string/back"
        android:background="@drawable/round_button" />

    <ImageButton
        android:id="@+id/forwardButton"
        android:layout_margin="@dimen/bottom_button_margin"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        android:src="@drawable/ic_arrow_right"
        android:contentDescription="@string/next"
        android:background="@drawable/round_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="3dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarrier"
        app:tabIconTint="@color/black"
        app:tabIndicatorColor="@android:color/holo_blue_bright"
        app:tabIndicatorFullWidth="false"
        app:tabRippleColor="#0D000000"
        app:tabSelectedTextColor="@android:color/holo_blue_bright"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toTopOf="@id/bottomBarrier"
        android:background="@drawable/rounded_main_image"
        android:elevation="5dp"
        tools:layout="@layout/main_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>